Fix: ignore Python venv and prepare for Render

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,3 +22,23 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# ======================
+# Python / AI services
+# ======================
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
+.venv/
+venv/
+env/
+**/.venv/
+**/venv/
+
+# Python build artifacts
+*.egg-info/
+.eggs/
+
